--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -56,6 +57,7 @@
     "@graphql-codegen/typescript-react-apollo": "^1.13.0",
     "@types/react-redux": "^7.1.7",
     "@types/redux-logger": "^3.0.7",
+    "@types/styled-components": "^5.0.1",
     "@types/testing-library__jest-dom": "^5.0.1",
     "@types/testing-library__react": "^9.1.2"
   }
