--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -56,6 +57,7 @@
     "@graphql-codegen/typescript-operations": "^1.13.0",
     "@graphql-codegen/typescript-react-apollo": "^1.13.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^5.0.1",
     "@types/testing-library__jest-dom": "^5.0.1",
