--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "storybook": "start-storybook",
     "gql_code_gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -55,6 +56,11 @@
     "@graphql-codegen/typescript": "^1.13.0",
     "@graphql-codegen/typescript-operations": "^1.13.0",
     "@graphql-codegen/typescript-react-apollo": "^1.13.0",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-docs": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/preset-create-react-app": "^2.1.0",
+    "@storybook/react": "^5.3.17",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
