--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
+    "storycap" :"storycap --serverTimeout 60000 --captureTimeout 10000 --serverCmd 'start-storybook --ci -p 9009' http://localhost:9009",
     "gql_code_gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -66,6 +67,12 @@
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^5.0.1",
     "@types/testing-library__jest-dom": "^5.0.1",
-    "@types/testing-library__react": "^9.1.2"
+    "@types/testing-library__react": "^9.1.2",
+    "reg-keygen-git-hash-plugin": "^0.8.5",
+    "reg-notify-github-plugin": "^0.8.5",
+    "reg-notify-gitlab-plugin": "^0.8.5",
+    "reg-publish-s3-plugin": "^0.9.0",
+    "reg-suit": "^0.10.0",
+    "storycap": "^2.3.5"
   }
 }
