--- a/.github/workflows/reg-suit.yml
+++ b/.github/workflows/reg-suit.yml
@@ -19,9 +19,9 @@ jobs:
     - name: workaround for detached HEAD
       run: |
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
-    - name: run storycap
-      run: |
-        yarn run storycap
+#     - name: run storycap
+#       run: |
+#         yarn run storycap
     - name: run reg-suit
       run: |
         npx reg-suit run
