カテゴリ一覧をデザイン

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,8 +58,7 @@
     "@graphql-codegen/typescript-operations": "^1.13.0",
     "@graphql-codegen/typescript-react-apollo": "^1.13.0",
     "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addon-storysource": "^5.3.17",
     "@storybook/preset-create-react-app": "^2.1.0",
     "@storybook/react": "^5.3.17",
     "@types/react-redux": "^7.1.7",
