--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "apollo-boost": "^0.4.7",
     "apollo-link-http": "^1.5.16",
     "axios": "^0.19.2",
+    "easygraphql-tester": "^5.1.6",
     "graphql": "^14.6.0",
     "immer": "^6.0.1",
     "react": "^16.12.0",
