--- a/frontend/regconfig.json
+++ b/frontend/regconfig.json
@@ -13,5 +13,11 @@
     "reg-notify-github-plugin": {
       "clientId": "$REG_NOTICE_CLIENT_ID"
     }
+  },
+  "reg-notify-gitlab-plugin": {
+    "privateToken": "$S3_TOKEN_FOR_REG_SUIT"
+  },
+  "reg-publish-s3-plugin": {
+    "bucketName": "react-laravel-graphql-reg-suit"
   }
 }
