--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "@types/testing-library__react": "^9.1.2",
     "reg-keygen-git-hash-plugin": "^0.8.5",
     "reg-notify-github-plugin": "^0.8.5",
+    "reg-publish-s3-plugin": "^0.9.0",
     "reg-suit": "^0.10.0",
     "storycap": "^2.3.5"
   }
