--- a/.github/workflows/reg-suit.yml
+++ b/.github/workflows/reg-suit.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.0.0
+      with:
+        fetch-depth:  0      
     - name: Set Node.js 12.x
       uses: actions/setup-node@v1.3.0
       with:
